test/fail_compilation/namedarg_haystack.d

void find(string needle, string haystack) { }

void main ()
{
    find(haystack: "abcdefg",
           needle: "def");
}
